# Robotic_AI_student_project

./: .gitignore  README.md  rangeMsg_Subscriber.py
Arduino/: SRF04_ROS.ino  SRF04_ROS2.ino  SRF04_ROS3.ino  SRF04_ROS4.ino
Arduino/SRF04_ROS4/: SRF04_ROS4.ino
devel/: .catkin  _setup_util.py
doku/: KIS_ROB_Abgabe.tex  Literatur.bib  Literatur.bib.sav  Robot_Projekt.tex  bib.bib  bib.bib.sav
doku/img/: AI-Only.pdf_tex  Gesamtsystem.pdf_tex  Hardwarekomponenten.pdf_tex
keras/: find_marker.py  test_network.py  trainTheCNN.py
otherScripts/: doubleMyData.py  snap_data_img.py
src/: find_marker.py  rangeMsg_Subscriber.py  snap_data_img.py
src/donkey_car/launch/: ai_hardware.launch  keyboard_demo.launch
src/donkey_car/src/: low_level_control.py  low_level_control_with_sonar.py
src/high_level/: high_level_controll.py  mainpage.dox  manifest.xml
src/ki_nav/: CMakeLists.txt  find_marker.py  find_publish_marker.py  mainpage.dox  manifest.xml  package.xml
src/ki_nav/launch/: start_AI.launch
src/ki_nav/src/: find_publish_marker.py
src/ros-i2cpwmboard/launch/: i2cpwm_node.launch
src/rosBerry_demo/: CMakeLists.txt  package.xml
src/rosBerry_demo/src/: rosberry_demo.py
src/send_image/: CMakeLists.txt  package.xml
src/send_image/src/: compress_send.py  image_publisher.cpp
